// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HexGrid renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    clickHandler={[Function]}
    rows={
        Array [
            Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 0,
                "meta": "Joseph",
                "title": "About Me",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#292929",
                "id": 1,
                "meta": "Certified",
                "title": "ReactJS",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#F0DB4F",
                "id": 2,
                "meta": "Favorite Language",
                "title": "JavaScript",
              },
            ],
            Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "#5159BF",
                "fill": "#292929",
                "id": 3,
                "meta": "Framework",
                "title": "Redux",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 4,
                "meta": "Problem Solving",
                "title": "Algorithms",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 5,
                "meta": "Career",
                "title": "Work Experience",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 6,
                "meta": "Code as a hobby",
                "title": "Python",
              },
            ],
            Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 7,
                "meta": "Value Creation",
                "title": "Hacks",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#C92F00",
                "id": 8,
                "meta": "Acknowledgments",
                "title": "Winner of...",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 9,
                "meta": "Life as a React Developer",
                "title": "Currently",
              },
            ],
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "centered": true,
      "children": Array [
        <Unknown
          clickHandler={[Function]}
          row={
                    Array [
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 0,
                                "meta": "Joseph",
                                "title": "About Me",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#292929",
                                "id": 1,
                                "meta": "Certified",
                                "title": "ReactJS",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#F0DB4F",
                                "id": 2,
                                "meta": "Favorite Language",
                                "title": "JavaScript",
                              },
                            ]
          }
/>,
        <Unknown
          clickHandler={[Function]}
          row={
                    Array [
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "#5159BF",
                                "fill": "#292929",
                                "id": 3,
                                "meta": "Framework",
                                "title": "Redux",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 4,
                                "meta": "Problem Solving",
                                "title": "Algorithms",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 5,
                                "meta": "Career",
                                "title": "Work Experience",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 6,
                                "meta": "Code as a hobby",
                                "title": "Python",
                              },
                            ]
          }
/>,
        <Unknown
          clickHandler={[Function]}
          row={
                    Array [
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 7,
                                "meta": "Value Creation",
                                "title": "Hacks",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#C92F00",
                                "id": 8,
                                "meta": "Acknowledgments",
                                "title": "Winner of...",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 9,
                                "meta": "Life as a React Developer",
                                "title": "Currently",
                              },
                            ]
          }
/>,
      ],
      "columns": 10,
      "container": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "GridRow0",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "row": Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "GridRow1",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "row": Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "#5159BF",
              "fill": "#292929",
              "id": 3,
              "meta": "Framework",
              "title": "Redux",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 4,
              "meta": "Problem Solving",
              "title": "Algorithms",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 5,
              "meta": "Career",
              "title": "Work Experience",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 6,
              "meta": "Code as a hobby",
              "title": "Python",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "GridRow2",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "row": Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 7,
              "meta": "Value Creation",
              "title": "Hacks",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#C92F00",
              "id": 8,
              "meta": "Acknowledgments",
              "title": "Winner of...",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 9,
              "meta": "Life as a React Developer",
              "title": "Currently",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "centered": true,
        "children": Array [
          <Unknown
            clickHandler={[Function]}
            row={
                        Array [
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 0,
                                      "meta": "Joseph",
                                      "title": "About Me",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#292929",
                                      "id": 1,
                                      "meta": "Certified",
                                      "title": "ReactJS",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#F0DB4F",
                                      "id": 2,
                                      "meta": "Favorite Language",
                                      "title": "JavaScript",
                                    },
                                  ]
            }
/>,
          <Unknown
            clickHandler={[Function]}
            row={
                        Array [
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "#5159BF",
                                      "fill": "#292929",
                                      "id": 3,
                                      "meta": "Framework",
                                      "title": "Redux",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 4,
                                      "meta": "Problem Solving",
                                      "title": "Algorithms",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 5,
                                      "meta": "Career",
                                      "title": "Work Experience",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 6,
                                      "meta": "Code as a hobby",
                                      "title": "Python",
                                    },
                                  ]
            }
/>,
          <Unknown
            clickHandler={[Function]}
            row={
                        Array [
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 7,
                                      "meta": "Value Creation",
                                      "title": "Hacks",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#C92F00",
                                      "id": 8,
                                      "meta": "Acknowledgments",
                                      "title": "Winner of...",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 9,
                                      "meta": "Life as a React Developer",
                                      "title": "Currently",
                                    },
                                  ]
            }
/>,
        ],
        "columns": 10,
        "container": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "GridRow0",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "row": Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 0,
                "meta": "Joseph",
                "title": "About Me",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#292929",
                "id": 1,
                "meta": "Certified",
                "title": "ReactJS",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#F0DB4F",
                "id": 2,
                "meta": "Favorite Language",
                "title": "JavaScript",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "GridRow1",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "row": Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "#5159BF",
                "fill": "#292929",
                "id": 3,
                "meta": "Framework",
                "title": "Redux",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 4,
                "meta": "Problem Solving",
                "title": "Algorithms",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 5,
                "meta": "Career",
                "title": "Work Experience",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 6,
                "meta": "Code as a hobby",
                "title": "Python",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "GridRow2",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "row": Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 7,
                "meta": "Value Creation",
                "title": "Hacks",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#C92F00",
                "id": 8,
                "meta": "Acknowledgments",
                "title": "Winner of...",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 9,
                "meta": "Life as a React Developer",
                "title": "Currently",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HexGridColumn renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    clickHandler={[Function]}
    tile={
        Object {
            "Component": [Function],
            "Content": [Function],
            "backgroundFill": "#333",
            "fill": "#222",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Hexagon
        diagonal={100}
        flatTop={false}
        onClick={[Function]}
        style={
                Object {
                        "fill": "#333",
                        "stroke": "none",
                      }
        }
>
        <Component
                fill="#222"
                handler={[Function]}
        />
</Hexagon>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Component
          fill="#222"
          handler={[Function]}
/>,
        "diagonal": 100,
        "flatTop": false,
        "onClick": [Function],
        "style": Object {
          "fill": "#333",
          "stroke": "none",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#222",
          "handler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Hexagon
          diagonal={100}
          flatTop={false}
          onClick={[Function]}
          style={
                    Object {
                              "fill": "#333",
                              "stroke": "none",
                            }
          }
>
          <Component
                    fill="#222"
                    handler={[Function]}
          />
</Hexagon>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Component
            fill="#222"
            handler={[Function]}
/>,
          "diagonal": 100,
          "flatTop": false,
          "onClick": [Function],
          "style": Object {
            "fill": "#333",
            "stroke": "none",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#222",
            "handler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HexGridRow renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    clickHandler={[Function]}
    row={
        Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Unknown
          clickHandler={[Function]}
          tile={
                    Object {
                              "Component": [Function],
                              "Content": [Function],
                              "backgroundFill": "tomato",
                              "fill": "#273B7A",
                              "id": 0,
                              "meta": "Joseph",
                              "title": "About Me",
                            }
          }
/>,
        <Unknown
          clickHandler={[Function]}
          tile={
                    Object {
                              "Component": [Function],
                              "Content": [Function],
                              "backgroundFill": "tomato",
                              "fill": "#292929",
                              "id": 1,
                              "meta": "Certified",
                              "title": "ReactJS",
                            }
          }
/>,
        <Unknown
          clickHandler={[Function]}
          tile={
                    Object {
                              "Component": [Function],
                              "Content": [Function],
                              "backgroundFill": "tomato",
                              "fill": "#F0DB4F",
                              "id": 2,
                              "meta": "Favorite Language",
                              "title": "JavaScript",
                            }
          }
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "backgroundFill": "tomato",
            "fill": "#273B7A",
            "id": 0,
            "meta": "Joseph",
            "title": "About Me",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "backgroundFill": "tomato",
            "fill": "#292929",
            "id": 1,
            "meta": "Certified",
            "title": "ReactJS",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "backgroundFill": "tomato",
            "fill": "#F0DB4F",
            "id": 2,
            "meta": "Favorite Language",
            "title": "JavaScript",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Unknown
            clickHandler={[Function]}
            tile={
                        Object {
                                    "Component": [Function],
                                    "Content": [Function],
                                    "backgroundFill": "tomato",
                                    "fill": "#273B7A",
                                    "id": 0,
                                    "meta": "Joseph",
                                    "title": "About Me",
                                  }
            }
/>,
          <Unknown
            clickHandler={[Function]}
            tile={
                        Object {
                                    "Component": [Function],
                                    "Content": [Function],
                                    "backgroundFill": "tomato",
                                    "fill": "#292929",
                                    "id": 1,
                                    "meta": "Certified",
                                    "title": "ReactJS",
                                  }
            }
/>,
          <Unknown
            clickHandler={[Function]}
            tile={
                        Object {
                                    "Component": [Function],
                                    "Content": [Function],
                                    "backgroundFill": "tomato",
                                    "fill": "#F0DB4F",
                                    "id": 2,
                                    "meta": "Favorite Language",
                                    "title": "JavaScript",
                                  }
            }
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
